--- a/threesixty/lang/en/help/threesixty/mods.html
+++ b/threesixty/lang/en/help/threesixty/mods.html
@@ -1,4 +1,21 @@
-<p><img alt="" src="<?php echo $CFG->wwwroot?>/mod/threesixty/icon.gif" />&nbsp;<b>360 Degree Diagnostics and Gap Analysis Tool</b></p>
+<?php
+// This file is part of Moodle - http://moodle.org/
+//
+// Moodle is free software: you can redistribute it and/or modify
+// it under the terms of the GNU General Public License as published by
+// the Free Software Foundation, either version 3 of the License, or
+// (at your option) any later version.
+//
+// Moodle is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+//
+// You should have received a copy of the GNU General Public License
+// along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
+?>
+<p><img alt="" src="<?php echo $CFG->wwwroot?>/mod/threesixty/icon.gif" />&nbsp;
+<b>360 Degree Diagnostics and Gap Analysis Tool</b></p>
 <div class="indent">
 This module is designed to implement a 360 degree competency analysis. This
 method of assessment is also referred to as "multisource feedback." An
