a few warnings eliminated

--- a/lang/en/help/threesixty/index.html
+++ b/lang/en/help/threesixty/index.html
@@ -1,3 +1,4 @@
+<!--suppress HtmlUnknownTarget -->
 <h2>360 Degree Diagnostics and Gap Analysis Tool</h2>
 <ul>
   <li><a href="help.php?module=threesixty&amp;file=mods.html">General
