--- a/lang/en/help/threesixty/mods.html
+++ b/lang/en/help/threesixty/mods.html
@@ -1,4 +1,4 @@
-<?php
+<!--
 // This file is part of Moodle - http://moodle.org/
 //
 // Moodle is free software: you can redistribute it and/or modify
@@ -13,9 +13,8 @@
 //
 // You should have received a copy of the GNU General Public License
 // along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
-?>
-<p><img alt="" src="<?php echo $CFG->wwwroot?>/mod/threesixty/icon.gif" />&nbsp;
-<b>360 Degree Diagnostics and Gap Analysis Tool</b></p>
+-->
+<p><b>360 Degree Diagnostics and Gap Analysis Tool</b></p>
 <div class="indent">
 This module is designed to implement a 360 degree competency analysis. This
 method of assessment is also referred to as "multisource feedback." An
